# hinkypunk

./: .gitignore  README.md  pyproject.toml  ruff.toml  setup.py
hinky/callbacks/: __init__.py  callback.py  config.py
hinky/callbacks/bundled/: __init__.py  classification.py  monitor.py  profiler.py
hinky/datasets/: __init__.py  cache_dataset.py  data_struct.py  dataset_constructor.py  dataset_initialization.py
hinky/logger/: __init__.py  config.py  loggers.py  metrics.py  types.py  utils.py
hinky/logger/bundled/: TensorBoardLogger.py  WandbLogger.py
hinky/optimizer/: __init__.py  optimizer_constructor.py
hinky/trainer/: __init__.py  checkpoint_kit.py  config.py  episode_stepper.py  epoch_trainer.py  eval_stepper.py  img_classifier.py  train_stepper.py  trainer.py  trainer_fn.py
hinky/utils/: __init__.py  imports.py  pytrees.py
jax_trainer/callbacks/: __init__.py  callback.py  config.py
jax_trainer/callbacks/bundled/: __init__.py  classification.py  monitor.py  profiler.py
jax_trainer/datasets/: __init__.py  data_struct.py  dataset_constructor.py  examples.py  transforms.py
jax_trainer/logger/: __init__.py  array_storing.py  config.py  enums.py  loggers.py  metrics.py  types.py  utils.py
jax_trainer/logger/bundled/: TensorBoardLogger.py  WandbLogger.py  __init__.py
jax_trainer/optimizer/: config.py  optimizer_constructor.py
jax_trainer/trainer/: __init__.py  checkpoint_kit.py  config.py  episode_stepper.py  epoch_trainer.py  eval_stepper.py  img_classifier.py  state.py  train_stepper.py  trainer.py  trainer_fn.py
tests/config/: cifar10_classifier.yaml
tests/datasets/: test_datasets.py
tests/logger/: test_logger.py
tests/models/networks/: simple_cnn.py
tests/optimizer/: test_optimizer.py
tests/trainer/: test_trainer.py
