[tool.poetry]
name = "jax_trainer"
version = "0.1.0"
description = "Lightning-like framework for JAX"
authors = ["Nick DePalma <structure@fastmail.us>"]
readme = "README.md"
homepage = "https://github.com/ndepalma/jax-trainer"
packages = [{ include = "jax_trainer" }]

[tool.poetry.dependencies]
python = ">=3.10"
jax = ">=0.4.13"
jaxlib = ">=0.4.13"
numpy = "*"
tensorboard = ">=2.13.0"
tensorboardX = "*"
optax = ">=0.2.5"
orbax-checkpoint = ">=0.11.19"
flax = ">=0.7.0"
pydantic = ">=2.12.5"
pydantic-yaml = ">=1.6.0"
datasets = ">=4.8.5"
progress_table = "*"
dltype = "*"

[tool.pyrefly]
project-includes = ["**/*.py*"]
project-excludes = [
    "**/node_modules",
    "**/__pycache__",
    "**/*venv/**/*",
    "**/.[!/.]*/**/*",
]

[tool.poetry.group.dev.dependencies]
pytest = "*"
pyrefly = ">= 1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
test = [
    "pytest (>=8.4.2,<9.0.0)"
  ]
dev = [
    "pyrefly (>= 1.0.0)"
]
