[tool.poetry]
name = "hinkypunk"
version = "0.1.1"
description = "Lightning-like framework for JAX"
authors = ["Nick DePalma <structure@fastmail.us>"]
readme = "README.md"
license = "MIT"
homepage = "https://github.com/petroglyf/hinkypunk"
packages = [{ include = "hinky" }]

[tool.poetry.dependencies]
python = ">=3.10"
cyclopts = ">=4.20"
jax = ">=0.4.13"
jaxlib = ">=0.4.13"
numpy = "*"
altair = ">=6.2.0"
tensorboard = {version = ">=2.13.0", optional = true}
tensorboardX = {version = "*", optional = true}
optax = ">=0.2.5"
orbax-checkpoint = ">=0.11.19"
flax = ">=0.7.0"
pydantic = ">=2.12.5"
datasets = ">=4.8.5"
progress_table = "*"
dltype = "*"
wandb = {version = ">=0.28.0", optional = true}
numba = ">=0.66.0"

[tool.poetry.extras]
tensorboard = ["tensorboard", "tensorboardX"]
wandb = ["wandb"]

[tool.pyrefly]
project-includes = ["**/*.py*"]
project-excludes = [
    "**/node_modules",
    "**/__pycache__",
    "**/*venv/**/*",
    "**/.[!/.]*/**/*",
]

[tool.poetry.group.dev.dependencies]
pytest = "*"
pyrefly = ">= 1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
test = [
    "pytest (>=8.4.2,<9.0.0)"
  ]
dev = [
    "pyrefly (>= 1.0.0)"
]
